finished authors endpoints
