# routes/authors.js
@@ -5,12 +5,12 @@ const authorsController = require('../controllers/authors');
 
 router.get('/', authorsController.getAllAuthors);
 
-// router.get('/:id', authorsController.getSingleAuthor);
+router.get('/:id', authorsController.getSingleAuthor);
 
-// router.post('/', authorsController.createAuthor);
+router.post('/', authorsController.createAuthor);
 
-// router.put('/:id', authorsController.updateAuthor);
+router.put('/:id', authorsController.updateAuthor);
 
-// router.delete('/:id', authorsController.deleteAuthor);
+router.delete('/:id', authorsController.deleteAuthor);
 
 module.exports = router;
